# trading-app

./: CMakeLists.txt  README.md
include/: logger.h
src/: logger.cpp  main.cpp
src/auth/: AuthManager.cpp  AuthManager.h
src/auth/utils/: HttpClient.cpp  HttpClient.h
src/execution/: ExecutionManager.cpp  ExecutionManager.h
src/market/: MarketDataIntegrator.cpp  MarketDataIntegrator.h  MarketDataManager.cpp  MarketDataManager.h
src/market/models/: OrderBook.cpp  OrderBook.h
src/orders/: OrderManager.cpp  OrderManager.h
src/orders/models/: order.h
src/risk/: RiskManager.cpp  RiskManager.h
src/websockets/: ClientHandler.cpp  ClientHandler.h  WebSocketServer.cpp  WebSocketServer.h
